Support for SWT 3.133